# Magma-Modular-Proxy

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: main.rs
test/1.20.4/: eula.txt  server.properties
test/1.20.4/world/: level.dat_old
test/1.20.4/world/advancements/: 93a446c3-73da-4f7b-b4e7-34458b064359.json
test/1.20.4/world/poi/: r.-1.0.mca  r.-2.0.mca
test/1.20.4/world/region/: r.-1.0.mca  r.-2.0.mca
test/b1.7.3/: server.properties
test/b1.7.3/world/: level.dat_old
test/b1.7.3/world/DIM-1/region/: r.-1.-1.mcr  r.-1.0.mcr  r.0.-1.mcr  r.0.0.mcr
test/b1.7.3/world/region/: r.-1.-1.mcr  r.-1.0.mcr  r.0.-1.mcr  r.0.0.mcr
