[package]
name = "MMP"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3.18"
tokio = {version = "1.41.0", features = ["rt", "rt-multi-thread", "net", "macros", "fs", "sync", "io-util", "time"]}
bytes = "1.8.0"
tracing = "0.1.40"
clap = { version = "4.5.20", features = ["derive", "env"] }
residua-mutf8 = "2.0.0"
mysql_async = "0.34.2"
